--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             >
                 <a-entity
                     id="bowser-model"
-                    scale="0.07718394922632316 0.07718394922632316 0.07718394922632316"
+                    scale="0.08 0.08 0.08"
+                    position="0.2 0 0.5"
+                    rotation="-90 0 0"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     class="clickable"
