--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
             embedded
             gesture-detector
         >
+            
+        const myHeight =window.innerWidth *window.devicePixelRatio
+        const myWidth = window.innerHeight*window.devicePixelRatio
+
+        var arToolkitSource = new THREEx.ArToolkitSource({
+        sourceType: 'webcam',
+        // resolution of at which we initialize the source image
+        sourceWidth: myWidth,
+        sourceHeight: myHeight,
+        // resolution displayed for the source
+        displayWidth: myWidth,
+        displayHeight: myHeight,
+        })
+            
             <a-assets>
                 <a-asset-item
                     id="animated-asset"
